--- a/package.json
+++ b/package.json
@@ -1,6 +1,8 @@
 {
+  "type": "module",
   "dependencies": {
     "axios": "^1.7.2",
+    "chalk": "^5.4.1",
     "colors": "^1.4.0",
     "https-proxy-agent": "^7.0.5",
     "luxon": "^3.5.0",
